--- a/contact.html
+++ b/contact.html
@@ -55,16 +55,16 @@
                 if (contacts[i].phoneNumbers[j]) {
                     phone = contacts[i].phoneNumbers[j].value;
                 };
-            };
+            };*/
             for (var k = 0; k < contacts[i].emails.length; k++) {
                 if (contacts[i].emails[k]) {
                     email = contacts[i].emails[k].value;
                 };
-            };*/
+            };
             
             /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';*/
 
-            var item = contacts[i].name.formatted +", "+ contacts[i].id ;
+            var item = "<div class='list'><span class='list-title'>"+contacts[i].name.formatted +"</span> "+ contacts[i].id +",<br> "+ email +"</div>" ;
 
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
