--- a/contact.html
+++ b/contact.html
@@ -56,11 +56,11 @@
                     phone = contacts[i].phoneNumbers[j].value;
                 };
             };*/
-            for (var k = 0; k < contacts[i].emails.length; k++) {
+            /*for (var k = 0; k < contacts[i].emails.length; k++) {
                 if (contacts[i].emails[k]) {
                     email = contacts[i].emails[k].value;
                 };
-            };
+            };*/
             
             /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';*/
 
