--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
             
             /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';*/
 
-            var item = "<div class='list'><span class='list-title'>"+contacts[i].name.formatted +"</span> "+ phone +",<br> "+ email +"</div>" ;
+            var item = "<div class='list'><img src='"+photo+"' class='list-icon' ><span class='list-title'>"+contacts[i].name.formatted +"</span> "+ phone +",<br> "+ email +"</div>" ;
 
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
