--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,9 @@
             };
 
             if (contacts[i].phoneNumbers) {
-                for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
-                    // html += "<li>Type: " + contacts[i].phoneNumbers[j].type + "<br/>" +
-                    phone = contacts[i].phoneNumbers[j].value;
-                        // "Preferred: " + contacts[i].phoneNumbers[j].pref + "</li>";
+                phone = contacts[i].phoneNumbers[0].value;
+                for (var j = 1; j < contacts[i].phoneNumbers.length; j++) {
+                    phone += ", "+contacts[i].phoneNumbers[j].value;
                 }
             };
 
@@ -80,7 +79,7 @@
             
             /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';*/
 
-            var item = "<div class='list'><img src='"+photo+"' class='list-icon' ><span class='list-title'>"+contacts[i].name.formatted +"</span> "+ phone +",<br> "+ email +"</div>" ;
+            var item = "<div class='list'><img src='"+photo+"' class='list-icon' ><span class='list-title'>"+contacts[i].name.formatted +"</span> "+ phone +"<br> "+ email +"</div>" ;
 
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
