--- a/index.html
+++ b/index.html
@@ -56,26 +56,21 @@
     var networkState = navigator.connection.type;
 
     var states = {};
-    states[Connection.UNKNOWN]  = 'Unknown connection';
-    states[Connection.ETHERNET] = 'Ethernet connection';
-    states[Connection.WIFI]     = 'WiFi connection';
-    states[Connection.CELL_2G]  = 'Cell 2G connection';
-    states[Connection.CELL_3G]  = 'Cell 3G connection';
-    states[Connection.CELL_4G]  = 'Cell 4G connection';
-    states[Connection.CELL]     = 'Cell generic connection';
-    states[Connection.NONE]     = 'No network connection';
+    states[Connection.UNKNOWN]  = 'Unknown';
+    states[Connection.ETHERNET] = 'Ethernet';
+    states[Connection.WIFI]     = 'WiFi';
+    states[Connection.CELL_2G]  = 'Cell 2G';
+    states[Connection.CELL_3G]  = 'Cell 3G';
+    states[Connection.CELL_4G]  = 'Cell 4G';
+    states[Connection.CELL]     = 'Cell generic';
+    states[Connection.NONE]     = 'No network';
 
-    alert('Connection type: ' + states[networkState]);
-  }
-
-  function onOnline() {
-    // Handle the online event
-    var networkState = navigator.connection.type;
-
+    // alert('Connection type: ' + states[networkState]);
     if (networkState !== Connection.NONE) {
-      
+      $("#network .tile-label").html(states[networkState]);
+    }else{
+      $("#network .tile-label").html(states[networkState]);
     }
-    display('Connection type: ' + networkState);
   }
 
     
