--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
     // alert('Connection type: ' + states[networkState]);
     if (networkState !== Connection.NONE) {
       $("#network .tile-label").html(states[networkState]);
+      $("#network .tile-badge").html("Connected");
     }else{
       $("#network .tile-label").html(states[networkState]);
+      $("#network .tile-badge").html("Not Connected");
     }
   }
 
@@ -120,7 +122,7 @@
     <div class="flex-grid">
       <div class="row cell-auto-size">
         <div id="battery" class="cell">
-          <div class="tile margin-auto" data-role="tile">
+          <div class="tile-wide margin-auto" data-role="tile">
             <div class="tile-content bg-green iconic">
               <span class="icon mif-battery-two fg-white mif-4x"></span>
               <span class="tile-label">50%</span>
@@ -129,7 +131,7 @@
           </div>
         </div>
         <div id="network" class="cell">
-          <div class="tile margin-auto" data-role="tile">
+          <div class="tile-wide margin-auto" data-role="tile">
             <div class="tile-content bg-orange iconic">
               <span class="icon mif-wifi-full fg-white"></span>
               <span class="tile-label">WiFi</span>
