--- a/support.html
+++ b/support.html
@@ -26,39 +26,35 @@
         })
     })
 
-    function setOptions(srcType) {
+    document.addEventListener('deviceready', onDeviceReady, false);
+
+    function onDeviceReady (argument) {
+
       var options = {
           // Some common settings are 20, 50, and 100
           quality: 50,
-          destinationType: Camera.DestinationType.FILE_URI,
+          destinationType: Camera.DestinationType.DATA_URI,
           // In this app, dynamically set the picture source, Camera or photo gallery
-          sourceType: srcType,
+          sourceType: Camera.PictureSourceType.CAMERA,
           encodingType: Camera.EncodingType.JPEG,
           mediaType: Camera.MediaType.PICTURE,
           allowEdit: true,
           correctOrientation: true  //Corrects Android orientation quirks
       }
-      return options;
+
+      
     }
 
     function openCamera(selection) {
-      var srcType = Camera.PictureSourceType.CAMERA;
-      var options = setOptions(srcType);
-      var func = createNewFileEntry;
-
-      navigator.camera.getPicture(function cameraSuccess(imageUri) {
-          displayImage(imageUri);
-          // You may choose to copy the picture, save it somewhere, or upload.
-          func(imageUri);
-
-      }, function cameraError(error) {
-          console.debug("Unable to obtain picture: " + error, "app");
-
-      }, options);
+      // var func = createNewFileEntry;
+      navigator.camera.getPicture(cameraSuccess, cameraError, options);
     }
 
-    function displayImage(imgUri) {
-      $("#camPic").attr("src",imgUri);
+    function cameraSuccess(imageData) {
+        $("#camPic").attr("src","data:image/jpeg;base64"+imageData);
+    }
+    function cameraError(error) {
+          alert("Unable to obtain picture: " + error, "app");
     }
 
     </script>
