--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </script>
 </head>
 
-<body onload="batteryStatus();">
+<body onload="onDeviceReady();">
 <header class="head">
   <div class="app-bar orange " data-role="appbar">
       <a class="app-bar-element">WOW</a>
