--- a/support.html
+++ b/support.html
@@ -62,7 +62,7 @@
     </script>
 </head>
 
-<body>
+<body onload="onDeviceReady();">
     <header class="head">
         <div class="app-bar orange" data-role="appbar">
             <a class="app-bar-element" href="...">WOW</a>
